--- a/app/src/main/res/drawable/background_image_button_new_todo.xml
+++ b/app/src/main/res/drawable/background_image_button_new_todo.xml
@@ -7,5 +7,5 @@
         android:left="8dp"
         android:right="8dp"
         android:top="8dp" />
-    <solid android:color="@color/primaryDarkColor" />
+    <solid android:color="@color/design_default_color_primary" />
 </shape>
