--- a/app/src/main/res/layout/list_item_current_lectures_day.xml
+++ b/app/src/main/res/layout/list_item_current_lectures_day.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dailyLecturesView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    app:strokeColor="@color/primaryColor"
+    app:strokeWidth="6dp"
     android:elevation="8dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -18,7 +21,7 @@
 
 
         <TextView
-            android:id="@+id/lectureDate"
+            android:id="@+id/currentLectureDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
@@ -28,7 +31,7 @@
             android:textSize="16sp" />
 
     <LinearLayout
-        android:id="@+id/lecturesOfDay"
+        android:id="@+id/currentLecturesOfDay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" />
