--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <item
-    android:id="@+id/refreshButton"
+    android:id="@+id/settingsButton"
     android:orderInCategory="100"
-    android:title="Aktualisieren" />
+    app:showAsAction="always"
+    android:tooltipText="Einstellungen"
+    android:icon="@drawable/ic_baseline_settings_24"
+    android:title="Einstellungen" />
 
-    <item
-        android:id="@+id/settingsButton"
-        android:orderInCategory="100"
-        android:title="Einstellungen" />
 </menu>
