--- a/app/src/main/res/layout/list_item_current_lectures_day.xml
+++ b/app/src/main/res/layout/list_item_current_lectures_day.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    app:strokeColor="@color/primaryColor"
+    app:strokeColor="#C8C8C8"
     app:strokeWidth="6dp"
     android:elevation="8dp"
     app:layout_constraintEnd_toEndOf="parent"
