--- a/app/src/main/res/layout/list_item_weekend_day.xml
+++ b/app/src/main/res/layout/list_item_weekend_day.xml
@@ -6,11 +6,10 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:elevation="8dp"
+    app:cardBackgroundColor="?attr/colorPrimaryDark"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:strokeColor="#4CAF50"
-    app:strokeWidth="3dp">
+    app:layout_constraintTop_toTopOf="parent">
 
 
     <LinearLayout
@@ -21,22 +20,29 @@
 
 
         <TextView
-            android:id="@+id/weekendLectureDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:gravity="center"
-            android:text="12.02.2021"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textSize="16sp" />
-
-        <TextView
             android:id="@+id/lectureWeekendLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:gravity="center"
+            android:textColor="@android:color/darker_gray"
             android:text="Wochenende"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+
+        <TextView
+            android:id="@+id/weekendLectureDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:gravity="center"
+            android:textColor="@android:color/darker_gray"
+            android:text="24.01.21 - 25.01.21"
             android:textAppearance="?attr/textAppearanceBody1"
             android:textSize="16sp" />
 
