--- a/app/src/main/res/layout/fragment_lectures.xml
+++ b/app/src/main/res/layout/fragment_lectures.xml
@@ -32,7 +32,7 @@
 
     <ProgressBar
         android:id="@+id/lecturesLoadingIndicator"
-        style="@android:style/Widget.ProgressBar.Large"
+        style="@android:style/Widget.Material.ProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
