--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#6A6A6A"
-    tools:context="general.settings.SettingsFragment">
+    tools:context=".settings.SettingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
